feat(main site): rework to minimal

--- a/index.html
+++ b/index.html
@@ -12,25 +12,27 @@
 </head>
 <body>
 <div id="content">
-    <div id="vladivostok">
-        Рандомный факт обо мне
-        <span id="refresh" class="material-symbols-outlined">
+    <div id="name">Илья Леонтьев</div>
+    <div>студент × разработчик игр</div>
+    <div id="button" onclick="onClick()">  
+        показать рандомный факт обо мне
+        <!-- <span id="refresh" class="material-symbols-outlined">
             refresh
-        </span>
+        </span> -->
     </div>
     <div id="coords">
         Я программист если вы не знали
     </div>
     <ul>
-        <li><a href="https://vk.com/derlie_monne">
+        <li><a class="link" href="https://vk.com/derlie_monne">
             ВК
         </a>
         </li>
-        <li><a href="https://t.me/derliemonne">
+        <li><a class="link" href="https://t.me/derliemonne">
             ТГ
         </a>
         </li>
-        <li><a href="">
+        <li><a class="link" href="">
             ГИТХАБ
         </a>
         </li>
