feat(facts generation) - clicking on text generates random fact

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             refresh
         </span> -->
     </div>
-    <div id="coords">
+    <div id="fact">
         Я программист если вы не знали
     </div>
     <ul>
