feat - final version

--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
 
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="static/style.css">
+    <script src="static/script.js"></script>
     
     
 </head>
 <body>
 <div id="content">
     <div id="name">Илья Леонтьев</div>
-    <div>студент × разработчик игр</div>
+    <div id="nickname">@derlie.monne</div>
+    <div id="coords">студент × разработчик игр</div>
     <div id="button" onclick="onClick()">  
         показать рандомный факт обо мне
         <!-- <span id="refresh" class="material-symbols-outlined">
@@ -21,22 +22,21 @@
         </span> -->
     </div>
     <div id="fact">
-        Я программист если вы не знали
+        ???
     </div>
     <ul>
         <li><a class="link" href="https://vk.com/derlie_monne">
-            ВК
+            вк
         </a>
         </li>
         <li><a class="link" href="https://t.me/derliemonne">
-            ТГ
+            тг
         </a>
         </li>
-        <li><a class="link" href="">
-            ГИТХАБ
+        <li><a class="link" href="https://github.com/derliemonne">
+            гитхаб
         </a>
         </li>
-    </ul>
-
+    </ul>    
 </div>
 </body></html>
